add swagger auth catalog
